# nip-backend/docs/swagger.yaml
@@ -69,7 +69,7 @@ definitions:
   models.SACRequestModel:
     properties:
       sid:
-        example: Y2I4NjBmMmQ1YmM1YTFjODQ4ZTA3OTdiMzE5MTU5NzE4OTBhMTRmMzA0MmFjY2ZjMjZjYjk4Y2EwNWI1OWE2Yg==
+        example: jEA4/2q3Z4DcSllWmXtCbOaRrzyYAn3VXDHW5AN5U/8=
         type: string
       signed_sid:
         example: lOY7KkjuT3HV7R0/l66LR/0vR5URqy6i0cMH4nEHebks4ZSIHPO63FY+DCZX9QRu3VPt/eO21Fwm69pXk1lWbETll5vXbpChkKjaOAsuJfIRqWBX+bXHfiBCPvdjGr0f5YfWDx8xL1ndbXntNYF1WBt02Z/2JG06XsPsYwrT1FFDw6GiJiliJrBBJ7CYj4GhgdrgD70ZPdadKl7ChAgp9erc9s1nZ3Kdhnp9xmUR+aHcxi0RfikCvhgZvVvbHneSviI8tjp8zxT4VJhX2gbIJ/0fp4CVIaiHxHsMzCPB3rFdNNo5Pqr4TyDG/IP5k3QLD1yQXY+a9wlw6MGUBEiXrw==
@@ -84,8 +84,30 @@ definitions:
         example: "2024-12-31T23:59:59Z"
         type: string
       sac:
-        example: 874532
-        type: integer
+        example: 7MWorstwntw=
+        type: string
+    type: object
+  models.SACVerificationRequestModel:
+    properties:
+      public_key:
+        example: LS0tLS1CRUdJTiBQVUJMSUMgS0VZLS0tLS0KTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUF1aVRTYzZMY3NmaFRZbEY0WDk2OApEcStXVzNrRmx3U21UR2NJQXJ5eFZ2OVhBQ2VFSXJuL0JYZE9McTFNSU52enc5WTZvNmhTd3hqUkp2SzlvdFpMCnlXYzFvc2RUNGdlTDJaT2xEMHUwakFvbEpqVU9hVWVyMmJKQTUzQzhXMjd1MHJyQzVvc3Z3THRNVWYxWnpTR0MKL2hrY0VOcjNjRGl6YWJibkw2dzVFUEdCVjlNU2RnaUdlelJXaXVEeGIzcldEOFNwSlpNa2c5b3ZSK3dOMlI2YwpOK2RwTkNjdDdWYjQxaWhXU0VXT1o2djhFdTREV3FjVW0vQzBpLzZ3eVJkWU93Y0E3NktkMmkxcnNZdHFlQS84CnZuMklTTEp2eGdkM3ZCdXY1ZnFkS0kzRm0rd3NIVDhHdHlkQUw5VjF4V3g4bnFlcFlwMlIvaXJMNHFUeGFnVzkKMXdJREFRQUIKLS0tLS1FTkQgUFVCTElDIEtFWS0tLS0tCg==
+        type: string
+      sac:
+        example: 7MWorstwntw=
+        type: string
+      signed_sac:
+        example: Tn7dpsKMqbhC3j8/o7OH5juVrkejhhZYkDHNqVyp8Am8uRktEDKO5i09iH9GZO0NOQHRRKD6lpwD0wC5GEPiuHN6aAof3WtPO9bqEB8ZLup4FjnyDh3mMX1UlvlYjKi6eTLMD2J8dwObz0nkmZOVsjk51o8jMapJtfnzMkYhADh4vZVDLpWYWbtBsmmXhNHS4SuWc+K3ZKMLtCYE/MFK3JT+Zcyabmrd9jmqvHRgi9XT+kABZ6XnyUSp4VWo1M7pl767/hZM5CxqgXORUMk8z9M9lHCDOsLfjBOwi81ObMtd+4oVgXgAbzBBHXnicB6X5PEBb5Qyh0RNyWFFNOEvtA==
+        type: string
+    required:
+    - public_key
+    - sac
+    - signed_sac
+    type: object
+  models.SACVerificationResponseModel:
+    properties:
+      valid:
+        example: true
+        type: boolean
     type: object
 host: localhost:8888
 info:
@@ -208,6 +230,44 @@ paths:
           schema:
             $ref: '#/definitions/models.ErrorResponseModel'
       summary: PAC verification request
+      tags:
+      - auth
+  /v1/auth/verify-sac:
+    post:
+      consumes:
+      - application/json
+      description: Allows a user to verify a SAC (Public Authentication Code) simulating
+        a service that supports anonymous authentication. The API accepts `SAC, PK,
+        SIGN(SAC, SK)` namely the SAC, the public key that identifies the anonymous
+        account and the SAC signed with the private key associated with the public
+        key of the anonymous account.
+      parameters:
+      - description: SAC Verification Request Model
+        in: body
+        name: models.SACVerificationRequestModel
+        required: true
+        schema:
+          $ref: '#/definitions/models.SACVerificationRequestModel'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: The Secret Authentication Code Verification Response
+          schema:
+            $ref: '#/definitions/models.SACVerificationResponseModel'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/models.ErrorResponseModel'
+        "404":
+          description: Not found
+          schema:
+            $ref: '#/definitions/models.ErrorResponseModel'
+        "500":
+          description: An error occurred
+          schema:
+            $ref: '#/definitions/models.ErrorResponseModel'
+      summary: SAC verification request
       tags:
       - auth
   /v1/identity/pid:
